[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/UI/CoinCounter.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI/PauseMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fonts/SuperTux-Medium2.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/UI/diamond.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 25
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_bottom = 11
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 15
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[node name="LevelUI" type="CanvasLayer" groups=[
"CoinCounter",
"HealthCounter",
]]
script = ExtResource( 1 )

[node name="PauseMenu" parent="." instance=ExtResource( 2 )]

[node name="CoinCounter" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 100.0
margin_right = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinCount" type="Label" parent="CoinCounter"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -42.0
margin_top = 25.0
margin_right = -22.0
margin_bottom = 51.0
grow_horizontal = 0
rect_scale = Vector2( 0.75, 0.75 )
size_flags_horizontal = 0
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.87451, 0.898039, 0.164706, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="X" type="Label" parent="CoinCounter/CoinCount"]
margin_left = -15.3333
margin_top = 5.0
margin_right = -4.33331
margin_bottom = 21.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.87451, 0.898039, 0.164706, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinIcon" type="TextureRect" parent="CoinCounter/CoinCount"]
margin_left = -51.0
margin_top = -3.0
margin_right = -19.0
margin_bottom = 29.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Control" parent="."]
anchor_left = 1.01
anchor_top = 0.013
anchor_right = 1.01
anchor_bottom = 0.013
margin_left = 6.66602
margin_top = 66.5014
margin_right = 49.666
margin_bottom = 99.5014
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthCount" type="Label" parent="Health"]
anchor_left = 1.148
anchor_top = -0.096
anchor_right = 1.148
anchor_bottom = -0.096
margin_left = -12.6886
margin_top = 0.00218272
margin_right = 25.3114
margin_bottom = 16.0022
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Health"]
anchor_left = -3.312
anchor_top = 0.148
anchor_right = -3.312
anchor_bottom = 0.148
margin_left = 49.6989
margin_top = -6.884
margin_right = 91.6989
margin_bottom = 7.116
rect_scale = Vector2( 1.00776, 1.00647 )
text = "Health"
__meta__ = {
"_edit_use_anchors_": false
}
